# the_haystack

./: .env.example  .gitignore  README.md  _read_gr.py  app.py  config.py  data_inspect.json  debug.html  mock_data.py  models.py  pyproject.toml  refactor_epics.py  requirements.txt  tmp_check.py  wsgi_pythonanywhere.py
data/: MANIFEST.md
data/qa/: unmapped_employers.csv
db/: __init__.py  connection.py  init_db.py  seed.py
docs/: EPIC_19_CAREER_INTELLIGENCE.md  HAYSTACK_AI_COLLAB_GUIDE.md  HAYSTACK_DATASET_ONBOARDING_TEMPLATE.md  HAYSTACK_DATA_INTEGRATION_PLAYBOOK.md  HAYSTACK_EPICS.md  HAYSTACK_IPEDS_V1_SPEC.md  HAYSTACK_KC_SOURCE_LADDER.md  HAYSTACK_MASTER_PLAN.md  HAYSTACK_PRD.md  HAYSTACK_SEARCH_SPEC.md  HAYSTACK_TECH_DEBT.md  HAYSTACK_UI_PLAYBOOK.md
loaders/: __init__.py  link_org_parents.py  load_apprenticeships.py  load_automation_risk.py  load_bls_matrix.py  load_bls_oews.py  load_bls_projections.py  load_bls_qcew.py  load_cip_soc.py  load_etpl.py  load_ipeds_demographics.py  load_ipeds_institutions.py  load_ipeds_programs.py  load_ipeds_tables.py  load_lehd_j2j.py  load_major_employers.py  load_onet_bright_outlook.py  load_onet_data.py  load_remote_potential.py  load_scorecard.py  sweep_inactive_orgs.py  utils.py
migrations/: env.py
migrations/versions/: 22cd3f3f87eb_add_soft_delete_to_organization.py  (+20 more)
qa/: __init__.py  check_ipeds.py
routes/: __init__.py  admin.py  briefing.py  career_grade.py  cip_utils.py  compare.py  employers.py  fields.py  guided_search.py  hubs.py  industries.py  map.py  network.py  occupations.py  outlook.py  programs.py  providers.py  qcew_utils.py  search.py
scripts/: __init__.py  _score_verify.py  _scorecard_probe.py  _scorecard_probe2.py  _scorecard_probe3.py  download_bls_onet.py  download_data.py  run_pipeline.py
templates/: base.html  home.html  methods.html
tests/: __init__.py  conftest.py  test_coverage_bump.py  test_loaders.py  test_models.py  test_routes.py  test_routes_admin.py  test_routes_guided.py  test_routes_map.py  test_routes_network.py  test_routes_occupations.py  test_routes_programs.py  test_routes_providers.py  test_routes_search.py
(+85 files in other folders)
